deploy/minio/04service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
  - port: 9090
    name: console
  - port: 9000
    name: file
  clusterIP: None
  selector:
    app: minio
